--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script type="module" src="app.js"></script>
 </head>
 <body>
     <div class="app">
         <header>
             <h1>Crypto Predictions</h1>
+            <div class="user-info">
+                <!-- Сюда будет добавляться информация о пользователе -->
+            </div>
             <div class="wallet">
                 <span class="balance">1000 TON</span>
                 <button id="connectWallet">Подключить кошелек</button>
@@ -50,6 +54,5 @@
             <!-- Контент будет добавляться динамически -->
         </div>
     </div>
-    <script src="app.js"></script>
 </body>
 </html>
