--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Expires" content="0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Prediction Markets</title>
+    <title>Lemon Prediction</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -15,7 +15,7 @@
 <body>
     <div class="app">
         <header>
-            <h1>Crypto Predictions</h1>
+            <h1>Lemon Prediction</h1>
             <div class="user-info">
                 <!-- Сюда будет добавляться информация о пользователе -->
             </div>
