--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
 <body>
     <div class="app">
         <header>
-            <h1>Lemon Prediction</h1>
             <div class="user-info">
-                <!-- Сюда будет добавляться информация о пользователе -->
+                <div class="user-profile">
+                    <div class="user-avatar">
+                        <!-- Аватар будет добавлен через JavaScript -->
+                    </div>
+                    <div class="user-details">
+                        <span class="username"></span>
+                        <span class="user-tag"></span>
+                    </div>
+                </div>
             </div>
+            <h1>Lemon Prediction</h1>
             <div class="wallet">
                 <span class="balance">1000 TON</span>
                 <button id="connectWallet">Подключить кошелек</button>
