--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <header>
             <div class="user-info">
                 <div class="user-profile">
-                    <div class="user-avatar">
-                        <!-- Аватар будет добавлен через JavaScript -->
-                    </div>
+                    <div class="user-avatar"></div>
                     <div class="user-details">
                         <span class="username"></span>
                         <span class="user-tag"></span>
@@ -30,36 +28,8 @@
             <h1>Lemon Prediction</h1>
         </header>
 
-        <nav class="tabs">
-            <button class="tab-button active" data-tab="markets">Активные прогнозы</button>
-            <button class="tab-button" data-tab="my-bets">Мои прогнозы</button>
-            <button class="tab-button" data-tab="history">История</button>
-        </nav>
-
-        <div class="market-categories">
-            <button class="category-button active" data-category="all">Все рынки</button>
-            <button class="category-button" data-category="crypto">Крипто</button>
-            <button class="category-button" data-category="business">Бизнес</button>
-        </div>
-
-        <div class="search-bar">
-            <input type="text" id="searchInput" placeholder="Поиск событий...">
-        </div>
-
         <div id="marketsList" class="section active">
             <!-- Маркеты добавляются через JavaScript -->
-        </div>
-
-        <div id="myBets" class="section">
-            <!-- Ставки добавляются через JavaScript -->
-        </div>
-
-        <div id="history" class="section">
-            <!-- История добавляется через JavaScript -->
-        </div>
-
-        <div id="marketDetails" class="section">
-            <!-- Контент будет добавляться динамически -->
         </div>
     </div>
 </body>
